--- a/ManageRoom/โปรแกรมจัดการห้องเรียน/โปรแกรมจัดการห้องเรียน/FeedbackToSupport.resx
+++ b/ManageRoom/โปรแกรมจัดการห้องเรียน/โปรแกรมจัดการห้องเรียน/FeedbackToSupport.resx
@@ -117,14 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="lbl_whatsnew.Text" xml:space="preserve">
-    <value>อัพเดทเวอร์ชั่น 0.1
-       -สามารถเข้าหน้าจัดการได้
-อัพเดทเวอร์ชั่น 0.25
-       -เพิ่มหน้าตารางเรียน
-อัพเดทเวอร์ชั่น 0.4
-       -สามารถดึงข้อมูลมาจาก Database ได้
-       -เพิ่มตารางเวร
-       -เพิ่มตารางการใช้ห้องเรียน</value>
-  </data>
+  <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>37</value>
+  </metadata>
 </root>
